--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                 <div class="col-lg-4 col-sm-4 col-md-4 col-10 d-block m-auto">
                      
-                  <img src="c5.jpeg" class="card-img img-fluid">
+                  <img src="c5.jpg" class="card-img img-fluid">
                     <h1 class="card-title">WEB DEVELOPMENT</h1>
                     <p  class="card-text">How to make the homework</p>
                  </div>
